// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control.pwd $ariaDetails 1`] = `
<wup-pwd>
  <label
    for="txt1"
  >
    <span>
      <input
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        Some details for screen-readers
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-pwd>
`;

exports[`control.pwd $ariaDetails 2`] = `
<wup-pwd>
  <label
    for="txt1"
  >
    <span>
      <input
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-pwd>
`;

exports[`control.pwd $ariaSpeak 1`] = `
<wup-pwd>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="my-test-id txt2 my-test-id2"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  >
    Hello
  </section>
</wup-pwd>
`;

exports[`control.pwd $ariaSpeak 2`] = `
<wup-pwd>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="my-test-id my-test-id2"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-pwd>
`;

exports[`control.pwd $show/$hide error 1`] = `
<wup-pwd>
  <label
    for="txt1"
  >
    <span>
      <input
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-pwd>
`;

exports[`control.pwd $show/$hide error 2`] = `
<wup-pwd
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt2"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="opacity: 0;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      Some custom message here
    </span>
  </wup-popup>
</wup-pwd>
`;

exports[`control.pwd $show/$hide error 3`] = `
<wup-pwd>
  <label
    for="txt1"
  >
    <span>
      <input
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-pwd>
`;

exports[`control.pwd common tests render + styles 1`] = `<wup-pwd />`;

exports[`control.pwd common tests render + styles 2`] = `
<style>
  .wup-hidden, [wup-hidden] {
position: absolute;
height:1px; width:1px;
overflow:hidden;
clip:rect(1px,1px,1px,1px);
min-width:initial;
padding:0;}

  
[wup-icon] {
  display: inline-block;
  cursor: pointer;
  box-shadow: none;
  border: none;
  margin: 0;
  padding: 0;
  width: var(--icon-hover-r, 2em);
  height: var(--icon-hover-r, 2em);
  background: none;
  outline: none;
  border-radius: 50%;
}
[wup-icon]:after {
  content: "";
  display: inline-block;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  background: var(--icon, #000);
  -webkit-mask-size: var(--icon-size, 1em);
  mask-size: var(--icon-size, 1em);
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;

  -webkit-mask-image: var(--icon-img);
  mask-image: var(--icon-img);
}
[wup-icon]:focus {
   box-shadow: inset 0 0 0 99999px var(--icon-focus-bg);
}
[wup-icon]:focus:after {
   background: var(--icon-hover, var(--icon, #000));
}
@media (hover: hover) and (pointer: fine) {
  [wup-icon]:hover {
   box-shadow: inset 0 0 0 99999px var(--icon-hover-bg);
  }
  [wup-icon]:hover:after {
    background: var(--icon-hover, var(--icon, #000));
  }
  [wup-icon]:focus:hover {
   opacity: 0.9;
  }
}

  :root {
          --base-focus: #00778d;
          --base-btn-bg: #009fbc;
          --base-btn-text: #fff;
          --base-btn-focus: #005766;
          --base-btn2-bg: var(--base-btn-text);
          --base-btn2-text: var(--base-btn-bg);
          --base-btn3-bg: none;
          --base-btn3-text: inherit;
          --base-sep: #e4e4e4;
          --base-margin: 20px;
          --border-radius: 6px;
          --anim-t: 200ms;
          --anim: var(--anim-t) cubic-bezier(0, 0, 0.2, 1) 0ms;
          --icon-hover-r: 30px;
          --icon-hover-bg: #0001;
          --icon-focus-bg: #0000001a;
          --icon-size: 14px;
        }
        [wupdark] {
          --base-btn-focus: #bdbdbd;
          --base-sep: #141414;
          --icon: #fff;
          --icon-hover-bg: #fff1;
          --icon-focus-bg: #fff2;
          --scroll: #fff2;
          --scroll-hover: #fff3;
        }
  :root {
        --ctrl-padding: 1.5em 1em 0.5em 1em;
        --ctrl-focus: var(--base-focus);
        --ctrl-focus-label: var(--ctrl-focus);
        --ctrl-selected: var(--ctrl-focus);
        --ctrl-label: #5e5e5e;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-icon-size: 1em;
        --ctrl-text: inherit;
        --ctrl-bg: #fff;
        --ctrl-border: #e6e6e6;
        --ctrl-border-radius: var(--border-radius);
        --ctrl-err: #ad0000;
        --ctrl-err-bg: #fff4fa;
        --ctrl-err-valid: green;
        --ctrl-invalid-border: red;
        --wup-icon-cross: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M674.515 93.949a45.925 45.925 0 0 0-65.022 0L384.001 318.981 158.509 93.487a45.928 45.928 0 0 0-65.022 0c-17.984 17.984-17.984 47.034 0 65.018l225.492 225.494L93.487 609.491c-17.984 17.984-17.984 47.034 0 65.018s47.034 17.984 65.018 0l225.492-225.492 225.492 225.492c17.984 17.984 47.034 17.984 65.018 0s17.984-47.034 0-65.018L449.015 383.999l225.492-225.494c17.521-17.521 17.521-47.034 0-64.559z'/%3E%3C/svg%3E");
        --wup-icon-check: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M37.691 450.599 224.76 635.864c21.528 21.32 56.11 21.425 77.478 0l428.035-426.23c21.47-21.38 21.425-56.11 0-77.478s-56.11-21.425-77.478 0L263.5 519.647 115.168 373.12c-21.555-21.293-56.108-21.425-77.478 0s-21.425 56.108 0 77.478z'/%3E%3C/svg%3E");
        --wup-icon-dot: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='20'/%3E%3C/svg%3E");
        --wup-icon-back: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='m509.8 16.068-329.14 329.14c-21.449 21.449-21.449 56.174 0 77.567l329.14 329.14c21.449 21.449 56.174 21.449 77.567 0s21.449-56.174 0-77.567l-290.36-290.36 290.36-290.36c21.449-21.449 21.449-56.173 0-77.567-21.449-21.394-56.173-21.449-77.567 0z'/%3E%3C/svg%3E");
      }
      [wupdark] {
        --ctrl-bg: none;
        --ctrl-border: #104652;
        --ctrl-label: #919191;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-focus-label: #25a1b6;
        --ctrl-selected: #25a1b6;
        --ctrl-err: #ff6666;
        --ctrl-err-bg: #000;
        --ctrl-err-valid: #54d754;
      }
  :root {
      --ctrl-autofill: #00869e;
      --ctrl-clear: red;
      --ctrl-clear-hover: rgba(255,0,0,0.1);
      --ctrl-label-active-pos: translateY(calc(-100% - 0.2em)) scale(0.9);
     }
     [wupdark] {
        --ctrl-clear-hover: rgba(255,0,0,0.2);
        --ctrl-autofill: #89bc55;
        --ctrl-autofill-caret: #fff;
      }
  :root {
        --wup-icon-eye: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M384 122.182C209.455 122.182 60.392 230.749 0 384c60.392 153.251 209.455 261.818 384 261.818S707.608 537.251 768 384c-60.392-153.251-209.455-261.818-384-261.818zm0 436.363c-96.35 0-174.545-78.197-174.545-174.545S287.651 209.455 384 209.455 558.545 287.651 558.545 384 480.348 558.545 384 558.545zm0-279.272c-57.95 0-104.727 46.778-104.727 104.727S326.051 488.727 384 488.727 488.727 441.949 488.727 384 441.949 279.273 384 279.273z'/%3E%3C/svg%3E");
        --wup-icon-eye-off: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M384 209.375c96.393 0 174.625 78.232 174.625 174.625 0 22.701-4.54 44.005-12.573 63.913l101.981 101.981C700.77 505.889 742.331 448.961 767.826 384c-60.42-153.321-209.55-261.938-384.174-261.938-48.895 0-95.695 8.731-139.001 24.448l75.438 75.438c19.907-8.032 41.212-12.573 63.913-12.573zM34.75 114.03l95.695 95.695C72.469 254.778 27.067 314.85-.174 384.001 60.246 537.322 209.376 645.938 384 645.938c54.133 0 105.823-10.477 152.971-29.337l14.668 14.668 102.33 101.981 44.355-44.355L79.105 69.676 34.75 114.031zm193.135 193.135 54.133 54.133c-1.746 7.334-2.794 15.018-2.794 22.701 0 57.976 46.799 104.775 104.775 104.775 7.684 0 15.367-1.048 22.701-2.794l54.134 54.134c-23.4 11.525-49.244 18.51-76.835 18.51-96.393 0-174.625-78.232-174.625-174.625 0-27.591 6.985-53.435 18.51-76.835zm150.527-27.242 110.014 110.014.698-5.588c0-57.976-46.799-104.775-104.775-104.775l-5.937.349z'/%3E%3C/svg%3E");
     }
  
      WUP-PWD {
        --ctrl-focus-border: var(--ctrl-focus);
        contain: style;
        display: block;
        margin: 20px 0;
        box-shadow: 0 0 0 1px var(--ctrl-border);
        border-radius: var(--ctrl-border-radius);
        color: var(--ctrl-text);
        background: var(--ctrl-bg);
        cursor: pointer;
        -webkit-tap-highlight-color: transparent;
      }
      WUP-PWD strong,
      WUP-PWD legend {
        color: var(--ctrl-label);
        pointer-events: none;
      }
      WUP-PWD[invalid],
      WUP-PWD[invalid] &gt; [menu] {
        --ctrl-focus-border: var( --ctrl-invalid-border);
        box-shadow: 0 0 3px 0 var(--ctrl-focus-border);
      }
      WUP-PWD:focus-within,
      WUP-PWD:focus-within &gt; [menu] {
        box-shadow: 0 0 2px 1px var(--ctrl-focus-border);
      }
      WUP-PWD:focus-within strong,
      WUP-PWD:focus-within legend {
        color: var(--ctrl-focus-label);
        pointer-events: initial;
      }
      [disabled] WUP-PWD,
      WUP-PWD[disabled] {
        opacity: 0.6;
        cursor: not-allowed;
        -webkit-user-select: none;
        user-select: none;
      }
      [disabled] WUP-PWD &gt; label,
      WUP-PWD[disabled] &gt; label {
        pointer-events: none;
      }
      WUP-PWD label {
        display: flex;
        align-items: center;
        box-sizing: border-box;
        font: inherit;
        cursor: inherit;
        padding: var(--ctrl-padding);
        padding-top: 0;
        padding-bottom: 0;
      }
      WUP-PWD input,
      WUP-PWD textarea {
        padding: 0;
        margin: 0;
        cursor: inherit;
      }
      WUP-PWD [contenteditable=true] {
        margin: var(--ctrl-padding);
        margin-left: 0;
        margin-right: 0;
        cursor: inherit;
      }
      WUP-PWD strong {
        cursor: inherit;
      }
      WUP-PWD strong:empty {
        display: none;
      }
      WUP-PWD [aria-required="true"] + strong:after,
      WUP-PWD fieldset[aria-required="true"] &gt; legend:after {
        content: "*";
        font-size: larger;
        font-weight: bolder;
        line-height: 0;
      }
      WUP-PWD [error] {
        cursor: pointer;
        font-size: small;
        color: var(--ctrl-err);
        background: var(--ctrl-err-bg);
        overflow: auto;
        overflow: overlay;
        // text-shadow: 0 0 0 var(--ctrl-err);
      }
      WUP-PWD [error] ul {
        margin:0; padding:2px 4px 2px;
      }
      WUP-PWD [error] li {
        display: flex;
        align-items: center;
        margin-left: -5px;
      }
      WUP-PWD [error] li:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-dot);
        --ctrl-icon: var(--ctrl-err);
        
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
      }
      WUP-PWD [error] li[valid] {
        color: var(--ctrl-err-valid);
      }
      WUP-PWD [error] li[valid]:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-check);
        --ctrl-icon: var(--ctrl-err-valid);
      }
      WUP-PWD:focus-within [error] {
        max-height: none;
      }
      @media (hover: hover) and (pointer: fine) {
        WUP-PWD:hover strong,
        WUP-PWD[hovered] strong{
          color: var(--ctrl-focus-label);
        }
        WUP-PWD:hover,
        WUP-PWD:hover&gt;[menu],
        WUP-PWD[hovered],
        WUP-PWD[hovered]&gt;[menu] {
          box-shadow: 0 0 2px 1px var(--ctrl-focus-border);
        }
      }
        WUP-PWD {
          contain: style;
          cursor: text;
          flex: 1;
        }
        WUP-PWD label &gt; span {
          width: 100%;
          position: relative;
          display: flex;
          flex-direction: row-reverse;
        }
        WUP-PWD input,
        WUP-PWD textarea,
        WUP-PWD [maskholder],
        WUP-PWD [prefix],
        WUP-PWD [postfix] {
          padding: var(--ctrl-padding);
          padding-left: 0;
          padding-right: 0;
          font: inherit;
          color: inherit;
          margin: 0;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
        }
        WUP-PWD input,
        WUP-PWD textarea,
        WUP-PWD [contenteditable=true],
        WUP-PWD [maskholder],
        WUP-PWD [postfix] {
          width: 100%;
          box-sizing: border-box;
          border: none;
          background: none;
          outline: none;
        }
        WUP-PWD [prefix],
        WUP-PWD [postfix] {
          color: inherit;
          flex-shrink: 0;
        }
        WUP-PWD [maskholder],
        WUP-PWD [prefix],
        WUP-PWD [postfix] {
          display: none;
          pointer-events: none;
          text-overflow: initial;
          white-space: pre;
        }
        WUP-PWD [postfix] {
          position: absolute;
        }
        WUP-PWD [maskholder] {
          position: absolute;
          opacity: 0.65;
        }
        WUP-PWD [maskholder]&gt;i,
        WUP-PWD [postfix]&gt;i {
          visibility: hidden;
          font: inherit;
          white-space: pre;
        }
        WUP-PWD input:-webkit-autofill,
        WUP-PWD textarea:-webkit-autofill,
        WUP-PWD [contenteditable=true]:-webkit-autofill {
          font: inherit;
          -webkit-background-clip: text;
          -webkit-text-fill-color: var(--ctrl-autofill);
          caret-color: var(--ctrl-autofill-caret, auto);
        }
        WUP-PWD input:autofill,
        WUP-PWD textarea:autofill,
        WUP-PWD [contenteditable=true]:autofill {
          font: inherit;
          background-clip: text;
          text-fill-color: var(--ctrl-autofill);
          caret-color: var(--ctrl-autofill-caret, auto);
        }
        WUP-PWD strong {
          display: block;
          position: absolute;
          top: 50%;
          left: 0;
          padding: 0;
          margin: 0;
          box-sizing: border-box;
          max-width: 100%;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
          transform-origin: top left;
          transform: translateY(-50%);
          font-weight: normal;
          text-decoration: none;
          -webkit-backface-visibility: hidden;
          backface-visibility: hidden; 
        }
        @media not all and (prefers-reduced-motion) {
          WUP-PWD strong {
            transition: top var(--anim), transform var(--anim), color var(--anim);
          }
        }
        WUP-PWD input:not(:focus):placeholder,
        WUP-PWD textarea:not(:focus):placeholder {
          color: transparent;
        }
        WUP-PWD:focus-within strong,
        WUP-PWD input:not(:placeholder-shown) + strong,
        WUP-PWD textarea:not(:placeholder-shown) + strong,
        WUP-PWD [contenteditable=true]:not(:empty) + strong,
        WUP-PWD legend {
          transform: var(--ctrl-label-active-pos);
        }
        WUP-PWD input:-webkit-autofill + strong
        WUP-PWD textarea:-webkit-autofill + strong
        WUP-PWD [contenteditable=true]:-webkit-autofill + strong {
          transform: var(--ctrl-label-active-pos);
        }
        WUP-PWD input:autofill + strong,
        WUP-PWD textarea:autofill + strong,
        WUP-PWD [contenteditable=true]:autofill + strong {
          transform: var(--ctrl-label-active-pos);
        }
        WUP-PWD:focus-within [maskholder],
        WUP-PWD:focus-within [prefix],
        WUP-PWD:focus-within [postfix],
        WUP-PWD input:not(:placeholder-shown) ~ [prefix],
        WUP-PWD input:not(:placeholder-shown) ~ [postfix],
        WUP-PWD textarea:not(:placeholder-shown) ~ [prefix],
        WUP-PWD textarea:not(:placeholder-shown) ~ [postfix] {
          display: inline-block;
        }
        /* style for icons */
        WUP-PWD label:after,
        WUP-PWD label:before {
          
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
          cursor: pointer;
          -webkit-mask-image: none;
          mask-image: none;
        }
        WUP-PWD label:after {
          margin-right: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-PWD label:before {
          margin-left: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-PWD label&gt;button {
          z-index: 1;
          contain: strict;
          font-size: inherit;
          flex: 0 0 auto;
          align-self: center;
        }
        WUP-PWD button[clear] {
          --icon-size: var(--ctrl-icon-size);
          --icon-hover-r: 24px;
          --icon-img: var(--wup-icon-cross);
          --icon: var(--ctrl-label);
          --icon-hover: var(--ctrl-clear);
          --icon-hover-bg: var(--ctrl-clear-hover);
          display: none;
          margin-right: -0.5em;
        }
        WUP-PWD button[clear=back] {
          --icon-img: var(--wup-icon-back);
        }
        WUP-PWD:focus-within button[clear] {
          display: inline-block;
          opacity: 1;
        }
        @media (hover: hover) and (pointer: fine) {
          WUP-PWD:hover button[clear] {
            display: inline-block;
            opacity: 1;
          }
        }
        WUP-PWD[disabled] button[clear],
        WUP-PWD[readonly] button[clear] {
          display: none;
          pointer-events: none;
        }
        WUP-PWD {
          --ctrl-icon-img: var(--wup-icon-eye);
        }
        WUP-PWD[w-reverse] {
          --ctrl-icon-img: var(--wup-icon-eye-off);
        }
        WUP-PWD input[type='password'] {
          font-family: Verdana, sans-serif;
          letter-spacing: 0.125;
          margin-bottom: -1px;
        }
        WUP-PWD button[eye] {
          
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
          cursor: pointer;
          margin-right: -0.5em;
          -webkit-mask-size: calc(var(--ctrl-icon-size) * 1.3);
          mask-size: calc(var(--ctrl-icon-size) * 1.3);
        }
        WUP-PWD button[eye="off"] {
          --ctrl-icon-img: var(--wup-icon-eye-off);
        }
        WUP-PWD[w-reverse] button[eye="off"] {
          --ctrl-icon-img: var(--wup-icon-eye);
        }
        @media (hover: hover) and (pointer: fine) {
          WUP-PWD button[eye]:hover {
            box-shadow: none;
            background-color: var(--ctrl-focus-label);
          }
        }
        WUP-PWD button[clear] {
          margin: 0;
        }
</style>
`;

exports[`control.pwd common tests snapshot of $defaults 1`] = `
{
  "autoComplete": null,
  "autoFocus": false,
  "clearActions": 2,
  "clearButton": true,
  "debounceMs": 0,
  "disabled": false,
  "focusDebounceMs": 100,
  "label": null,
  "name": null,
  "postfix": "",
  "prefix": "",
  "readOnly": false,
  "reverse": false,
  "selectOnFocus": false,
  "validateDebounceMs": 500,
  "validationCase": 13,
  "validationRules": {
    "$alwaysInvalid": [Function],
    "$alwaysValid": [Function],
    "confirm": [Function],
    "email": [Function],
    "max": [Function],
    "min": [Function],
    "minLower": [Function],
    "minNumber": [Function],
    "minUpper": [Function],
    "required": [Function],
    "special": [Function],
  },
  "validationShowAll": false,
  "validations": null,
}
`;

exports[`control.pwd common tests snapshot of $defaults 2`] = `undefined`;

exports[`control.pwd common tests snapshot of $defaults 3`] = `
[
  "disabled",
  "readonly",
  "w-autocomplete",
  "w-autofocus",
  "w-clearactions",
  "w-clearbutton",
  "w-debouncems",
  "w-disabled",
  "w-focusdebouncems",
  "w-initvalue",
  "w-label",
  "w-name",
  "w-postfix",
  "w-prefix",
  "w-readonly",
  "w-reverse",
  "w-selectonfocus",
  "w-validatedebouncems",
  "w-validationcase",
  "w-validationrules",
  "w-validations",
  "w-validationshowall",
]
`;

exports[`control.pwd options clearButton 1`] = `
<wup-pwd>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt2"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  />
</wup-pwd>
`;

exports[`control.pwd options clearButton 2`] = `
<wup-pwd>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt2"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  />
</wup-pwd>
`;

exports[`control.pwd validations $options.validationShowAll 1`] = `
<wup-pwd
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt2"
        aria-required="true"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      This field is required
    </span>
    <ul
      aria-hidden="true"
    >
      <li>
        Min length is 2 characters
      </li>
      <li>
        Max length is 3 characters
      </li>
      <li>
        Invalid email address
      </li>
      <li>
        Must contain at least 2 numbers
      </li>
      <li>
        Must contain at least 2 upper case
      </li>
      <li>
        Must contain at least 1 lower case
      </li>
      <li>
        Must contain at least 1 special character: #!-_?,.@:;'
      </li>
    </ul>
  </wup-popup>
</wup-pwd>
`;

exports[`control.pwd validations $options.validationShowAll 2`] = `
<wup-pwd
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt2"
        aria-required="true"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    />
    <span
      class="wup-hidden"
    >
      Invalid email address
    </span>
    <ul
      aria-hidden="true"
    >
      <li
        valid=""
      >
        Min length is 2 characters
      </li>
      <li
        valid=""
      >
        Max length is 3 characters
      </li>
      <li>
        Invalid email address
      </li>
      <li
        valid=""
      >
        Must contain at least 2 numbers
      </li>
      <li>
        Must contain at least 2 upper case
      </li>
      <li>
        Must contain at least 1 lower case
      </li>
      <li>
        Must contain at least 1 special character: #!-_?,.@:;'
      </li>
    </ul>
  </wup-popup>
</wup-pwd>
`;

exports[`control.pwd validations $options.validationShowAll 3`] = `
<wup-pwd
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt5"
        aria-required="true"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong>
        First Name
      </strong>
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Name:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-pwd>
`;

exports[`control.pwd validations options.validationCase 1`] = `
<wup-pwd>
  <label
    for="txt1"
  >
    <span>
      <input
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-pwd>
`;

exports[`control.pwd validations options.validationCase 2`] = `
<wup-pwd
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt3"
        aria-required="true"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong>
        First Input
      </strong>
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear="back"
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt3"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-pwd>
`;

exports[`control.pwd validations options.validationCase 3`] = `
<wup-pwd
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt4"
        aria-required="true"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong>
        First Input
      </strong>
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt4"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      custom err here
    </span>
  </wup-popup>
</wup-pwd>
`;

exports[`control.pwd validations options.validationCase 4`] = `
<wup-pwd
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt5"
        aria-required="true"
        autocomplete="new-password"
        id="txt1"
        placeholder=" "
        type="password"
      />
      <strong>
        First Input
      </strong>
      <span
        class="wup-hidden"
      >
        press Alt + V to show/hide password
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
    <button
      aria-hidden="true"
      eye=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-pwd>
`;

exports[`control.pwd with form 1`] = `
<wup-form
  role="form"
>
  <wup-pwd>
    <label
      for="txt1"
    >
      <span>
        <input
          autocomplete="new-password"
          id="txt1"
          placeholder=" "
          type="password"
        />
        <strong>
          First Input
        </strong>
        <span
          class="wup-hidden"
        >
          press Alt + V to show/hide password
        </span>
      </span>
      <button
        aria-hidden="true"
        clear=""
        tabindex="-1"
        type="button"
        wup-icon=""
      />
      <button
        aria-hidden="true"
        eye=""
        tabindex="-1"
        type="button"
      />
    </label>
  </wup-pwd>
</wup-form>
`;
